kustomize/base/ingress-gateway-httproute-productcatalog.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: productcatalog
  namespace: ingress-gateway
  labels:
    app.kubernetes.io/name: productcatalog
    app.kubernetes.io/part-of: connectivity-link
spec:
  parentRefs:
    - name: prod-web
      namespace: ingress-gateway
  hostnames:
    - catalog.globex.placeholder
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /services/catalog
      backendRefs:
        - name: globex-store-app
          namespace: globex
          port: 8080
